# LibTriton

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
docs/: Architecture.md  Operator-Adaptation.md
libtriton-core/: CMakeLists.txt
libtriton-core/include/libtriton-core-c/: DLPackTypes.h  Dialects.h
libtriton-core/include/libtriton-core/Analysis/MemRefOriginAnalysis/: MemRefOriginAnalysis.h
libtriton-core/include/libtriton-core/Conversion/: Passes.td
libtriton-core/include/libtriton-core/Conversion/AOTIToLLVM/: AOTICAPIDescriptors.h  AOTIToLLVM.h
libtriton-core/include/libtriton-core/Conversion/Bufferization/: Bufferization.h
libtriton-core/include/libtriton-core/Conversion/DLPackToLLVM/: DLPackLLVMDescriptors.h
libtriton-core/include/libtriton-core/Conversion/Pipeline/: Pipeline.h
libtriton-core/include/libtriton-core/Conversion/TVMFFIToLLVM/: TVMFFICAPIDescriptors.h
libtriton-core/include/libtriton-core/Conversion/TorchConversionToLLVM/: TorchConversionToLLVM.h
libtriton-core/include/libtriton-core/Conversion/TorchExtToGPU/: TorchExtToGPU.h
libtriton-core/include/libtriton-core/Conversion/TorchExtToLLVM/: TorchExtToLLVM.h
libtriton-core/include/libtriton-core/Conversion/TorchToCf/: TorchToCf.h
libtriton-core/include/libtriton-core/Conversion/TorchToLLVM/: BackendTypeConversion.h  FuncBackendTypeConversion.h  TorchToLLVM.h
libtriton-core/include/libtriton-core/Conversion/Utils/: AOTICAPIDescriptors.h  LLVMStructBuilder.h  StdLibCAPIDescriptors.h  TVMFFICAPIDescriptors.h  Type.h
libtriton-core/include/libtriton-core/Dialect/: CMakeLists.txt
libtriton-core/include/libtriton-core/Runtime/: Runtime.h
libtriton-core/include/libtriton-core/Utils/: Registration.h
libtriton-core/include/libtriton_core/Conversion/DLPackToLLVM/: DLPackCAPIDescriptors.h  DLPackLLVMDescriptors.h
libtriton-core/include/libtriton_core/Conversion/Utils/: LLVMDescriptorCRTPBase.h  LLVMStructBuilder.h  StdLibCFunctionDeclUtils.h
libtriton-core/lib/: CMakeLists.txt
libtriton-core/lib/Analysis/MemRefOriginAnalysis/: MemRefOriginAnalysis.cc
libtriton-core/lib/CAPI/: CMakeLists.txt  DLPackTypes.cc  Dialects.cc  Registration.cc
libtriton-core/lib/Conversion/: CMakeLists.txt
libtriton-core/lib/Conversion/AOTIToLLVM/: AOTIToLLVM.cc  CMakeLists.txt
libtriton-core/lib/Conversion/Bufferization/: Bufferization.cc  CMakeLists.txt
libtriton-core/lib/Conversion/DLPackToLLVM/: DLPackDTypeUtils.cc  DLPackToLLVM.cc
libtriton-core/lib/Conversion/Pipeline/: CMakeLists.txt  Pipeline.cc
libtriton-core/lib/Conversion/TVMFFIToLLVM/: CMakeLists.txt  TVMFFIToLLVM.cc
libtriton-core/lib/Conversion/TorchConversionToLLVM/: TorchConversionToLLVM.cc
libtriton-core/lib/Conversion/TorchExtToGPU/: TorchExtToGPU.cc
libtriton-core/lib/Conversion/TorchExtToLLVM/: CMakeLists.txt  SchemaLookup.cc  SchemaLookup.h  TorchExtToLLVM.cc
libtriton-core/lib/Conversion/TorchToArith/: TorchToArith.cc
libtriton-core/lib/Conversion/TorchToCf/: CMakeLists.txt  TorchToCf.cc
libtriton-core/lib/Conversion/TorchToLLVM/: BackendTypeConversion.cc  CMakeLists.txt  FuncBackendTypeConversion.cc  SchemaLookup.cc  TorchToLLVM.cc
libtriton-core/lib/Conversion/Utils/: CMakeLists.txt  Type.cc
libtriton-core/lib/Dialect/: CMakeLists.txt
libtriton-core/lib/Dialect/AOTInductor/IR/: AOTInductorDialect.cc  CMakeLists.txt
libtriton-core/lib/Dialect/AOTInductor/Transforms/: CMakeLists.txt  RewriteTorchAsAOTI.cc
libtriton-core/lib/Dialect/TVMFFI/IR/: TVMFFIDialect.cc
libtriton-core/lib/Dialect/TVMFFI/Transforms/: FinalizeTVMFFICall.cc
libtriton-core/lib/Dialect/TorchExt/IR/: TorchExtDialect.cc
libtriton-core/lib/Dialect/TorchExt/Transforms/: BackendTypeConversion.cc  BufferizableOpInterfaceImpl.cc  CMakeLists.txt  RAAI.cc  RewriteTorchAsTorchExt.cc  TorchExtAsyncKernelLaunch.cc
libtriton-core/lib/Dialect/TritonRT/IR/: CMakeLists.txt  TritonRTDialect.cc
libtriton-core/lib/Runtime/: CMakeLists.txt  CPUMemRefRuntime.c  CUDAMemRefRuntime.c  DLPackRuntime.c  ExecutionEngineRuntimeExports.cc  Runtime.cc
libtriton-core/lib/Utils/: CMakeLists.txt  Registration.cc
libtriton-core/python/: CMakeLists.txt  LibTritonCoreModule.cpp  RegistrationModules.cc  RegistrationModules.cpp
libtriton-core/python/dialects/: AOTInductorOpsPyBind.td  DLPackOpsPyBind.td  TVMFFIOpsPyBind.td  TritonRTOpsPyBind.td
libtriton-core/python/libtriton_core/: __init__.py  capi_utils.py
libtriton-core/python/libtriton_core/dialects/: __init__.py  aoti.py  dlpack.py  tvm_ffi.py
libtriton-core/test/: CMakeLists.txt  lit.cfg.py
libtriton-core/test/CAPI/: CMakeLists.txt  tritonrt.c
libtriton-core/test/Conversion/AOTIToLLVM/: basic.mlir
libtriton-core/test/Conversion/Pipeline/: basic.mlir  empty.mlir  empty_like.mlir
libtriton-core/test/Conversion/TVMFFIToLLVM/: basic.mlir
libtriton-core/test/Conversion/TorchExtToGPU/: basic.mlir
libtriton-core/test/Conversion/TorchExtToLLVM/: basic.mlir
libtriton-core/test/Conversion/TorchToLLVM/: basic.mlir
libtriton-core/test/Dialect/AOTInductor/: ops.mlir
libtriton-core/test/Dialect/Bufferization/: libtriton-one-shot-bufferize.mlir
libtriton-core/test/Dialect/DLPack/: lower-to-llvm.mlir  ops.mlir
libtriton-core/test/Dialect/TVMFFI/: attributes.mlir  emit-tvm-ffi-interface.mlir  lower-to-llvm.mlir  ops.mlir
libtriton-core/test/Dialect/TorchExt/: async-kernel-launch.mlir  lower-to-llvm.mlir  normalize-launch-operands.mlir  ops.mlir  raai.mlir
libtriton-core/test/Dialect/TorchToCf/: basic.mlir
libtriton-core/test/Dialect/TritonRT/: normalize-launch-operands.mlir  ops.mlir
libtriton-core/test/Integration/: CMakeLists.txt
libtriton-core/test/Integration/Tensor/: e2e-dlpack-tensor-add.mlir
libtriton-core/test/Python/: CMakeLists.txt  smoke.py  torch_dialect_pipeline.py  tvm_ffi_add_e2e.py  tvm_ffi_add_numpy_e2e.py  tvm_ffi_add_torch_cpu_e2e.py
libtriton-core/tools/libtriton-core-opt/: CMakeLists.txt  libtriton-core-opt.cc
trident-core/lib/Runtime/: CMakeLists.txt  Runtime.cc
tvm_ffi_bindings/tools/tvm-ffi-opt/: CMakeLists.txt  tvm-ffi-opt.cc  tvm-ffi-opt.cpp
(+191 files in other folders)
